@@ -337,6 +337,7 @@ Internal:
 - "Player Connected" did not trigger 'player' plugin call.
 - Store $char->{attack_delay}. You attack once every
   $char->{attack_delay}/500 seconds.
+- Use bitshift-packing/unpacking to deal with coordinates in the protocol.
 
 Credits:
 - doenet: chatLangCode bugfixes.
@@ -348,6 +349,7 @@ Credits:
 - clovanzo: Louyang portals
 - h4rry84: Auto Berserk/Preserve status support.
 - illusionist: Follow master through warp portal.
+- faithful: Bit-shift packing code
 
 ==================
 ### 1.6.3
